@@ -273,6 +273,8 @@ AC_OUTPUT(
 	INSTALL 
 	FILE_ID.DIZ
 	script/editor
+	html/index.htm
+	html/basic.html
 )
 
 #=================================================================================
