@@ -13,7 +13,7 @@
 <BODY>
 <BLOCKQUOTE>
 <center><img SRC="images/mbse.png" BORDER=0></center>
-<div align=center><h1>MBSE BBS System Guide v0.39.0</h1></div>
+<div align=center><h1>MBSE BBS System Guide @VERSION@</h1></div>
 <div align=right><h5>Last update 11-Oct-2003</h5></div>
 <P>
 
