@@ -5,6 +5,7 @@ v0.39.1		22-Oct-2003
 
 	general:
 		Make dist now creates bzip2 archives.
+		Two html pages are now under control of configure.
 
 	upgrade:
 		If you don't have any personal archivers, then remove 
